--- a/.github/workflows/release-hotfix.yml
+++ b/.github/workflows/release-hotfix.yml
@@ -36,17 +36,17 @@ jobs:
             const headRef = pr.head.ref;
 
             const m = headRef.match(/^(?:release|hotfix)\/((0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-(?:0|[1-9]\d*|\d*[A-Za-z-][0-9A-Za-z-]*)(?:\.(?:0|[1-9]\d*|\d*[A-Za-z-][0-9A-Za-z-]*))*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?)$/);
-            if (!m) core.setFailed('Branchname ohne gültige SemVer: erwartet release/x.y.z[‑pre][+build] oder hotfix/x.y.z[‑pre][+build]');
+            if (!m) core.setFailed('Branch name without valid SemVer: expected release/x.y.z[-pre][+build] or hotfix/x.y.z[-pre][+build]');
             const version = m[1];
             const tag = `v${version}`;
             const isPrerelease = version.includes('-');
 
-            // Idempotenz: abbrechen wenn schon vorhanden
+            // Idempotency: abort if already exists
             let tagExists=false, relExists=false;
             try { await github.rest.git.getRef({ owner, repo, ref: `tags/${tag}` }); tagExists=true; } catch(e){ if (e.status !== 404) throw e; }
             try { await github.rest.repos.getReleaseByTag({ owner, repo, tag }); relExists=true; } catch(e){ if (e.status !== 404) throw e; }
             if (tagExists || relExists) {
-              core.setFailed(`Tag/Release ${tag} existiert bereits – Workflow bricht ab.`);
+              core.setFailed(`Tag/Release ${tag} already exists – workflow aborted.`);
               return;
             }
 
@@ -79,43 +79,43 @@ jobs:
             const base  = 'develop';
             const head  = 'main';
 
-            // 1) Direkter Merge-Versuch
+            // 1) Direct merge attempt
             let mergedDirect = false;
             try {
               const r = await github.rest.repos.merge({
                 owner, repo, base, head,
-                commit_message: `Sync ${head} -> ${base} nach ${tag}`
+                commit_message: `Sync ${head} -> ${base} after ${tag}`
               });
-              if (r.data.sha) { mergedDirect = true; core.info(`Direkter Back-merge: ${r.data.sha}`); }
+              if (r.data.sha) { mergedDirect = true; core.info(`Direct back-merge: ${r.data.sha}`); }
             } catch (e) {
-              core.info(`Direkter Merge nicht möglich (${e.status}): ${e.message}`);
+              core.info(`Direct merge not possible (${e.status}): ${e.message}`);
             }
 
-            // 2) Fallback: PR erstellen/mergen
+            // 2) Fallback: create/merge PR
             if (!mergedDirect) {
               const list = await github.rest.pulls.list({ owner, repo, state: 'open', base, head: `${owner}:${head}` });
               let pr = list.data[0];
               if (!pr) {
                 const created = await github.rest.pulls.create({
                   owner, repo, base, head,
-                  title: `Sync ${head} -> ${base} nach ${tag}`,
-                  body: `Automatischer Back-merge von ${tag}.`
+                  title: `Sync ${head} -> ${base} after ${tag}`,
+                  body: `Automatic back-merge after ${tag}.`
                 });
                 pr = created.data;
                 try { await github.rest.issues.addLabels({ owner, repo, issue_number: pr.number, labels: ['back-merge'] }); } catch {}
               }
               try {
                 await github.rest.pulls.merge({ owner, repo, pull_number: pr.number, merge_method: 'merge' });
-                core.info(`Back-merge PR #${pr.number} gemergt.`);
+                core.info(`Back-merge PR #${pr.number} merged.`);
               } catch (e) {
-                core.info(`Back-merge PR #${pr.number} konnte nicht gemergt werden (${e.status}).`);
+                core.info(`Back-merge PR #${pr.number} could not be merged (${e.status}).`);
                 try {
                   const latest = await github.rest.pulls.get({ owner, repo, pull_number: pr.number });
                   if (latest.data.mergeable === false || latest.data.mergeable_state === 'dirty') {
                     await github.rest.issues.addLabels({ owner, repo, issue_number: pr.number, labels: ['needs-conflict-resolution'] });
                     await github.rest.issues.createComment({
                       owner, repo, issue_number: pr.number,
-                      body: `Konflikte erkannt (z. B. package.json). Bitte manuell lösen.`
+                      body: `Conflicts detected (e.g. package.json). Please resolve manually.`
                     });
                   }
                 } catch {}
@@ -137,13 +137,13 @@ jobs:
             const headRef = `${{ needs.release.outputs.headRef }}`;
 
             if (pr.head.repo.full_name !== `${owner}/${repo}`) {
-              core.info('Branch stammt aus Fork – Löschen übersprungen.');
+              core.info('Branch from fork – deletion skipped.');
               return;
             }
             try {
               await github.rest.git.deleteRef({ owner, repo, ref: `heads/${headRef}` });
-              core.info(`Branch gelöscht: ${headRef}`);
+              core.info(`Branch deleted: ${headRef}`);
             } catch (e) {
-              if (e.status === 422 || e.status === 404) core.info('Branch bereits gelöscht oder nicht vorhanden.');
+              if (e.status === 422 || e.status === 404) core.info('Branch already deleted or not found.');
               else throw e;
             }
