--- a/.github/workflows/feature-pr-guard.yml
+++ b/.github/workflows/feature-pr-guard.yml
@@ -9,7 +9,9 @@ permissions:
 
 jobs:
   guard:
-    if: always()
+    name: Feature PR Guard
+    if: |
+      startsWith(github.event.pull_request.head.ref, 'feature/')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v7
